# service/apisvr/internal/handler/routes.go
@@ -1184,6 +1184,11 @@ func RegisterHandlers(server *rest.Server, serverCtx *svc.ServiceContext) {
 					Path:    "/update",
 					Handler: systemuserself.UpdateHandler(serverCtx),
 				},
+				{
+					Method:  http.MethodPost,
+					Path:    "/user/search",
+					Handler: systemuserself.UserSearchHandler(serverCtx),
+				},
 			}...,
 		),
 		rest.WithPrefix("/api/v1/system/user/self"),
